--- a/aanurestaurent.html
+++ b/aanurestaurent.html
@@ -26,6 +26,15 @@
                 background-color: #ffe066;
                 color:black;
             }
+            .footer{
+                position: fixed;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                background-color: black;
+                color: white;
+                text-align: center;
+            }
         </style>
     </head>
     <body>
@@ -38,9 +47,14 @@
             <a href="#">special offers</a>
             <a href="#">services</a>
         </div>
+        <div class="footer">
+            <p>@All rights reserved. Mohamed Shar-aan Sharwath</p>
+        </div>
         <section>
             <img class="myslides" src="download (1) (1).png" style="height: 500px;">
             <img class="myslides" src="download (3) (1).png" style="height: 500px;">
+            <img class="myslides" src="images (1) (1).png" style="height: 500px;">
+            <img class="myslides" src="images (2).png" style="height: 500px;">
         </section>
         <script>
             var myindex=0;
