--- a/aanurestaurent.html
+++ b/aanurestaurent.html
@@ -1,42 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            body{
-                margin: 0;
-                font-family: Arial, Helvetica, sans-serif;
-            }
-            .topnav {
-                overflow: hidden;
-                background-color: #333;
-            }
-            .topnav a {
-                float: left;
-                color: lightgrey;
-                text-align: center;
-                padding: 14px 16px;
-                text-decoration: none;
-                font-size: 17px;
-            }
-            .topnav a:hover {
-                background-color: #ddd;
-                color: black;
-            }
-            .topnav a.active {
-                background-color: #ffe066;
-                color:black;
-            }
-            .footer{
-                position: fixed;
-                left: 0;
-                bottom: 0;
-                width: 100%;
-                background-color: black;
-                color: white;
-                text-align: center;
-            }
-        </style>
+        <link rel="stylesheet" href="prop.css">
     </head>
+    <span class="border-trans" style="font-size: 3px;">
+        <center>well come all to this restaurant</center>
+    </span>
+    <section class="section section-dark">
+        <h2>Shar-aan's restaurant. </h2>
+        <p>We are happy to serve food</p>
+    </section>
+    <div class="pimg3">
+        <div class="ptext">
+            <span class="border trans">pizza, dish of Italian origin consisting of a
+                 flattened disk of bread dough topped with some combination of olive oil,
+                  oregano, tomato, olives, mozzarella or other cheese, and many other
+                   ingredients, baked quickly</span>
+        </div>
+    </div>
     <body>
         <div class="topnav">
             <a class="active" href="#home">Home</a>
@@ -50,26 +31,7 @@
         <div class="footer">
             <p>@All rights reserved. Mohamed Shar-aan Sharwath</p>
         </div>
-        <section>
-            <img class="myslides" src="download (1) (1).png" style="height: 500px;">
-            <img class="myslides" src="download (3) (1).png" style="height: 500px;">
-            <img class="myslides" src="images (1) (1).png" style="height: 500px;">
-            <img class="myslides" src="images (2).png" style="height: 500px;">
-        </section>
-        <script>
-            var myindex=0;
-            carousel();
-            function carousel() {
-                var i;
-                var x=document.getElementsByClassName("myslides");
-                for (let i = 0; i < x.length; i++) {
-                    x[i].style.display="none";
-                }
-                myindex++;
-                if (myindex > x.length){myindex=1}
-                x[myindex-1].style.display="block";
-                setTimeout(carousel,3000)
-            }
+            
         </script>
     </body>
 </html>
